tests/snapshots/deserializer__arraybuffer_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew ArrayBuffer(0)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [],
        max_byte_length: None,
    },
}

