tests/snapshots/deserializer__arraybuffer_one_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew ArrayBuffer(1)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
        ],
        max_byte_length: None,
    },
}

