tests/snapshots/deserializer__arraybuffer_with_data.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Uint8Array([1,2]).buffer"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            2,
        ],
        max_byte_length: None,
    },
}

