tests/snapshots/deserializer__bigint.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n1n"
---
=== VALUE ===
BigInt(1)

=== HEAP ===
Heap {}

