tests/snapshots/deserializer__bigint64array_one_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew BigInt64Array([-1n])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            255,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: BigInt64Array,
        buffer: *0,
        byte_offset: 0,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

