tests/snapshots/deserializer__bigint64array_two_bytes.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew BigInt64Array([1n, -2n])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            254,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: BigInt64Array,
        buffer: *0,
        byte_offset: 0,
        length: 2,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

