tests/snapshots/deserializer__bigint_neg.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n-1n"
---
=== VALUE ===
BigInt(-1)

=== HEAP ===
Heap {}

