tests/snapshots/deserializer__bigint_primitive.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nObject(1n)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BigIntObject(
        1,
    ),
}

